feat: added tasks

--- a/module_6-lesson_11/index.html
+++ b/module_6-lesson_11/index.html
@@ -8,9 +8,68 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="https://www.notion.so/JS-87d37ce4350046afb48b67e1ffa49636">Tasks</a>
   <main id="main-container"></main>
   <aside id="article"></aside>
   
+
+  <ul class="categories">
+    <li class="item">
+      <h2>1</h2>
+      <ul>
+        <li>
+          <h2>1</h2>
+        </li>
+        <li>
+          <h2>2</h2>
+        </li>
+        <li>
+          <h2>3</h2>
+        </li>
+        <li>
+          <h2>4</h2>
+        </li>
+      </ul>
+    </li>
+    <li class="item">
+      <h2>2</h2>
+      <ul>
+        <li>
+          <h2>1</h2>
+        </li>
+        <li>
+          <h2>2</h2>
+        </li>
+        <li>
+          <h2>3</h2>
+        </li>
+        <li>
+          <h2>4</h2>
+        </li>
+      </ul>
+    </li>
+    <li class="item">
+      <h2>3</h2>
+      <ul>
+        <li>
+          <h2>1</h2>
+        </li>
+        <li>
+          <h2>2</h2>
+        </li>
+        <li>
+          <h2>3</h2>
+        </li>
+        <li>
+          <h2>4</h2>
+        </li>
+      </ul>
+    </li>
+    <li class="item">
+      <h2>4</h2>
+    </li>
+  </ul>
+
   <script src="./index.js"></script>
 </body>
 </html>
